deploy/broai_kubernetes/ingress-local-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-broai-blue-green
spec:
  rules:
  - host: green.broai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broai-green
            port:
              number: 8050
  - host: blue.broai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broai-blue
            port:
              number: 8051
